--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
           ><i class="fa-solid fa-phone"></i>
           <p>+213557509867</p></a
         >
-        <a href="tel:+213797373782"
+        <a href="https://www.instagram.com/printinglab_360/"
           ><i class="fa-brands fa-instagram"></i>
           <p>+213797373782</p></a
         >
