--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
         >
         <a href="https://www.instagram.com/printinglab_360/"
           ><i class="fa-brands fa-instagram"></i>
-          <p>+213797373782</p></a
+          <p>Printing Lab</p></a
         >
       </div>
     </footer>
