--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
           <div class="child-container">
             <div class="links">
               <a
-                href="https://www.instagram.com/direct/t/17845600092139570/"
+                href="https://www.instagram.com/printinglab_360/""
                 target="_blank"
                 >تواصل معنا</a
               >
